[project]
name = "agentiaYaburu"
version = "0.1.0"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "imagekitio>=5.4.0",
    "langchain-openai>=1.2.1",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.46.0",
]
